aocunt image label ok.......

--- a/kotsukotsu/Base.lproj/Main.storyboard
+++ b/kotsukotsu/Base.lproj/Main.storyboard
@@ -150,14 +150,29 @@
                     <view key="view" contentMode="scaleToFill" id="aqO-op-xqR">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Nrh-HG-eHT">
+                                <rect key="frame" x="139" y="135" width="136" height="115"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="username" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EvT-Qx-jnz">
+                                <rect key="frame" x="20" y="300" width="374" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <color key="textColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="adC-eU-jtV"/>
                     </view>
-                    <navigationItem key="navigationItem" id="y0q-5p-jwn"/>
+                    <navigationItem key="navigationItem" id="y0q-5p-jwn">
+                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="fja-dH-y2a"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j8n-wb-2fk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1754" y="1631"/>
+            <point key="canvasLocation" x="1753.6231884057972" y="1630.5803571428571"/>
         </scene>
         <!--Login-->
         <scene sceneID="7MF-ad-sI9">
